--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "svelte": ">=3.0.0"
   },
   "exports": {
-    ".": "./components.js"
+    ".": "./src/lib/components.js"
   },
   "types": "./components.d.ts",
   "type": "module",
